# idr

./: .gitignore  Cargo.toml
config/: default.json  harden.sh  idr-sentinel.service
crates/idr-common/: Cargo.toml
crates/idr-common/src/: alert.rs  config.rs  events.rs  lib.rs  reputation.rs
crates/idr-ebpf/: Cargo.toml
crates/idr-ebpf/src/: igmp.rs  lib.rs  lineage.rs  loader.rs  physics.rs  ring_events.rs
crates/idr-ebpf/src/bpf/: igmp_xdp.rs  physics_tracepoint.rs  socket_kprobe.rs
crates/idr-hardware/: Cargo.toml
crates/idr-hardware/src/: arp.rs  lib.rs  nvme.rs  rtc.rs
crates/idr-network/: Cargo.toml
crates/idr-network/src/: lib.rs  ntp.rs  octet.rs  zeek.rs
crates/idr-sentinel/: Cargo.toml
crates/idr-sentinel/src/: correlator.rs  lib.rs  main.rs  panic_response.rs  websocket.rs
crates/idr-sim/: Cargo.toml
crates/idr-sim/src/: main.rs  scenarios.rs
dashboard/: package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/components/: AlertPanel.tsx  EventFeed.tsx  KillChain.tsx  SystemStatus.tsx
dashboard/src/lib/: types.ts  websocket.ts
zeek/: idr_detector.zeek
