[workspace]
resolver = "2"
members = [
    "crates/idr-common",
    "crates/idr-ebpf",
    "crates/idr-sentinel",
    "crates/idr-network",
    "crates/idr-hardware",
    "crates/idr-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/leelupton/idr"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
