[package]
name = "idr-ebpf"
description = "eBPF programs and userspace loader for kernel-layer telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
idr-common = { path = "../idr-common" }
aya = "0.13"
aya-log = "0.2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = "1"
uuid = { workspace = true }
