[package]
name = "idr-hardware"
description = "Hardware/Bus layer: NVMe watchdog, MoCA/ARP, RTC clock validation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
idr-common = { path = "../idr-common" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { version = "0.29", features = ["net", "ioctl", "time"] }
chrono = { workspace = true }
