[package]
name = "idr-network"
description = "Network layer detection: Zeek integration, Octet Reversal, NTP/TLS integrity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
idr-common = { path = "../idr-common" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
trust-dns-resolver = "0.23"
ipnetwork = "0.20"
